// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils/Legend/Sequential/Vertical CustomColors smoke-test 1`] = `
<div style="height: 250px;">
  <div class="_container_1gnp9_1 _vertical_1gnp9_5">
    <div class="_start_1gnp9_9">
      200
    </div>
    <div class="_gradient_1gnp9_16"
         style="background: linear-gradient(rgb(255, 111, 0) 0%, rgb(255, 126, 25) 10%, rgb(255, 141, 50) 20%, rgb(255, 157, 75) 30%, rgb(255, 172, 100) 40%, rgb(255, 187, 125) 50%, rgb(255, 202, 150) 60%, rgb(255, 218, 175) 70%, rgb(255, 233, 200) 80%, rgb(255, 248, 225) 90%);"
    >
    </div>
    <div class="_end_1gnp9_10">
      0
    </div>
  </div>
</div>
`;

exports[`Utils/Legend/Sequential/Vertical LongText smoke-test 1`] = `
<div style="height: 250px;">
  <div class="_container_1gnp9_1 _vertical_1gnp9_5">
    <div class="_start_1gnp9_9">
      50,000,000
    </div>
    <div class="_gradient_1gnp9_16"
         style="background: linear-gradient(rgb(45, 162, 131) 0%, rgba(43, 156, 126, 0.945) 10%, rgba(41, 150, 121, 0.89) 20%, rgba(39, 144, 116, 0.83) 30%, rgba(37, 138, 111, 0.776) 40%, rgba(36, 131, 106, 0.72) 50%, rgba(34, 125, 101, 0.667) 60%, rgba(32, 119, 96, 0.61) 70%, rgba(30, 113, 91, 0.557) 80%, rgba(28, 107, 86, 0.5) 90%);"
    >
    </div>
    <div class="_end_1gnp9_10">
      0
    </div>
  </div>
</div>
`;

exports[`Utils/Legend/Sequential/Vertical Simple smoke-test 1`] = `
<div style="height: 250px;">
  <div class="_container_1gnp9_1 _vertical_1gnp9_5">
    <div class="_start_1gnp9_9">
      200
    </div>
    <div class="_gradient_1gnp9_16"
         style="background: linear-gradient(rgb(45, 162, 131) 0%, rgba(43, 156, 126, 0.945) 10%, rgba(41, 150, 121, 0.89) 20%, rgba(39, 144, 116, 0.83) 30%, rgba(37, 138, 111, 0.776) 40%, rgba(36, 131, 106, 0.72) 50%, rgba(34, 125, 101, 0.667) 60%, rgba(32, 119, 96, 0.61) 70%, rgba(30, 113, 91, 0.557) 80%, rgba(28, 107, 86, 0.5) 90%);"
    >
    </div>
    <div class="_end_1gnp9_10">
      0
    </div>
  </div>
</div>
`;
